--- a/app/templates/about.html
+++ b/app/templates/about.html
@@ -8,7 +8,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Responsive Bootstrap4 Shop Template, Created by Imran Hossain from https://imransdesign.com/">
+	<meta name="description" content="">
 
 	<!-- title -->
 	<title>About</title>
@@ -55,7 +55,7 @@
 						<!-- logo -->
 						<div class="site-logo">
 							<a href="{{url_for('main.index')}}">
-								<img src="static/assets/img/logo.png" alt="">
+								<img src="static/assets/img/11.jpg" width="100px" alt="">
 							</a>
 						</div>
 						<!-- logo -->
@@ -163,7 +163,7 @@
 									</div>
 									<div class="content">
 										<h3>Home Delivery</h3>
-										<p>sit voluptatem accusantium dolore mque laudantium, totam rem aperiam, eaque ipsa quae ab illo.</p>
+										<p>The convenience of ordering online has brought about a spurt in the development of fruit delivery websites. Many websites act like platforms for customers to browse various fruits and order their next piece. Ours is more than that.</p>
 									</div>
 								</div>
 							</div>
@@ -174,7 +174,7 @@
 									</div>
 									<div class="content">
 										<h3>Best Price</h3>
-										<p>sit voluptatem accusantium dolore mque laudantium, totam rem aperiam, eaque ipsa quae ab illo.</p>
+										<p>We offer Comparison shopping engines (CSEs)-- tools that allow shoppers to compare pricing, shipping options, and provide services from multiple retailers on a single webpage, and identify the merchant that offers the best deal.</p>
 									</div>
 								</div>
 							</div>
@@ -185,7 +185,7 @@
 									</div>
 									<div class="content">
 										<h3>Custom Box</h3>
-										<p>sit voluptatem accusantium dolore mque laudantium, totam rem aperiam, eaque ipsa quae ab illo.</p>
+										<p>At the same time, many top fruit vendors also have an online portal that allows customers to order food online without visiting the physical shops. We provide more than that.</p>
 									</div>
 								</div>
 							</div>
@@ -196,7 +196,7 @@
 									</div>
 									<div class="content">
 										<h3>Quick Refund</h3>
-										<p>sit voluptatem accusantium dolore mque laudantium, totam rem aperiam, eaque ipsa quae ab illo.</p>
+										<p>One major factor that dictates where online shoppers make purchases is whether you have a clear and generous eCommerce returns policy. Definetly, we have!</p>
 									</div>
 								</div>
 							</div>
@@ -225,14 +225,15 @@
 				<div class="col-lg-8 offset-lg-2 text-center">
 					<div class="section-title">
 						<h3>Our <span class="orange-text">Team</span></h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, fuga quas itaque eveniet beatae optio.</p>
+						<p>Our team brings the clever idea of both the diversity of backgrounds, as well as the uniqueness of each member.</p>
 					</div>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-lg-4 col-md-6">
 					<div class="single-team-item">
-						<div class="team-bg team-bg-1"></div>
+						<div class="team-bg team-bg-1"> <img src="https://media.istockphoto.com/photos/farmer-holding-wooden-box-with-fresh-oranges-in-orchard-picture-id976838412?k=20&m=976838412&s=612x612&w=0&h=OYGnnJtE7sxPoqmc9l80pSHMPE4__xTmkTeaVKpGDPA=" alt="">
+						</div>
 						<h4>Jimmy Doe <span>Farmer</span></h4>
 						<ul class="social-link-team">
 							<li><a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
@@ -243,7 +244,7 @@
 				</div>
 				<div class="col-lg-4 col-md-6">
 					<div class="single-team-item">
-						<div class="team-bg team-bg-2"></div>
+						<div class="team-bg team-bg-2"> <img src="https://images.unsplash.com/photo-1575527820586-5f350ab37c6f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTh8fGZydWl0JTIwZmFybXxlbnwwfHwwfHw%3D&w=1000&q=80" alt=""></div>
 						<h4>Marry Doe <span>Farmer</span></h4>
 						<ul class="social-link-team">
 							<li><a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
@@ -254,7 +255,7 @@
 				</div>
 				<div class="col-lg-4 col-md-6 offset-md-3 offset-lg-0">
 					<div class="single-team-item">
-						<div class="team-bg team-bg-3"></div>
+						<div class="team-bg team-bg-3"><img src="https://images.unsplash.com/photo-1605000797499-95a51c5269ae?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8OXx8ZnJ1aXQlMjBmYXJtfGVufDB8fDB8fA%3D%3D&w=1000&q=80" alt=""></div>
 						<h4>Simon Joe <span>Farmer</span></h4>
 						<ul class="social-link-team">
 							<li><a href="#" target="_blank"><i class="fab fa-facebook-f"></i></a></li>
@@ -279,9 +280,9 @@
 								<img src="static/assets/img/avaters/avatar1.png" alt="">
 							</div>
 							<div class="client-meta">
-								<h3>Saira Hakim <span>Local shop owner</span></h3>
+								<h3>Richards Hakim <span>Local shop owner</span></h3>
 								<p class="testimonial-body">
-									" Sed ut perspiciatis unde omnis iste natus error veritatis et  quasi architecto beatae vitae dict eaque ipsa quae ab illo inventore Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium "
+									The quality of all the items enclosed is fantastic; so fresh and hardly any plastic in sight!
 								</p>
 								<div class="last-icon">
 									<i class="fas fa-quote-right"></i>
@@ -293,9 +294,9 @@
 								<img src="static/assets/img/avaters/avatar2.png" alt="">
 							</div>
 							<div class="client-meta">
-								<h3>David Niph <span>Local shop owner</span></h3>
+								<h3>Sudlow Niph <span>Local shop owner</span></h3>
 								<p class="testimonial-body">
-									" Sed ut perspiciatis unde omnis iste natus error veritatis et  quasi architecto beatae vitae dict eaque ipsa quae ab illo inventore Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium "
+									highly recommed this shop, we ordered sack of spuds thurs teatime, they came yday, friendly delivery man.will be ordering again.
 								</p>
 								<div class="last-icon">
 									<i class="fas fa-quote-right"></i>
@@ -307,9 +308,9 @@
 								<img src="static/assets/img/avaters/avatar3.png" alt="">
 							</div>
 							<div class="client-meta">
-								<h3>Jacob Sikim <span>Local shop owner</span></h3>
+								<h3>Jacob Laro <span>Local shop owner</span></h3>
 								<p class="testimonial-body">
-									" Sed ut perspiciatis unde omnis iste natus error veritatis et  quasi architecto beatae vitae dict eaque ipsa quae ab illo inventore Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium "
+									Had my first order delivered on Friday............ top quality fruit! Well happy ?
 								</p>
 								<div class="last-icon">
 									<i class="fas fa-quote-right"></i>
@@ -330,7 +331,7 @@
 				<div class="col-lg-12">
 					<div class="logo-carousel-inner">
 						<div class="single-logo-item">
-							<img src="static/assets/img/company-logos/1.png" alt="">
+							<img src="static/assets/img/company-logos/11.jpg" alt="">
 						</div>
 						<div class="single-logo-item">
 							<img src="static/assets/img/company-logos/2.png" alt="">
