--- a/app/templates/checkout.html
+++ b/app/templates/checkout.html
@@ -7,7 +7,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Responsive Bootstrap4 Shop Template, Created by Imran Hossain from https://imransdesign.com/">
+	<meta name="description" content="">
 
 	<!-- title -->
 	<title>Check Out</title>
@@ -54,7 +54,7 @@
 						<!-- logo -->
 						<div class="site-logo">
 							<a href="{{url_for('main.index')}}">
-								<img src="static/assets/img/logo.png" alt="">
+								<img src="static/assets/img/11.jpg" width="100px" alt="">
 							</a>
 						</div>
 						<!-- logo -->
@@ -271,7 +271,7 @@
 				<div class="col-lg-12">
 					<div class="logo-carousel-inner">
 						<div class="single-logo-item">
-							<img src="static/assets/img/company-logos/1.png" alt="">
+							<img src="static/assets/img/company-logos/11.jpg" width="100px" alt="">
 						</div>
 						<div class="single-logo-item">
 							<img src="static/assets/img/company-logos/2.png" alt="">
