--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -12,7 +12,7 @@
                     <!-- logo -->
                     <div class="site-logo">
                         <a href="{{url_for('main.index')}}">
-                            <img src="static/assets/img/logo.png" alt="Fruits">
+                            <img src="static/assets/img/11.jpg" width="100px" alt="Fruits">
                         </a>
                     </div>
                     <!-- logo -->
@@ -25,7 +25,7 @@
             </ul>
         </li>
         <li><a href="{{url_for('main.about')}}">About</a></li>
-        <li><a href="#">Pages</a>
+        <li><a href="{{url_for('main.index')}}">Pages</a>
             <ul class="sub-menu">
                 <li><a href="{{url_for('main.product')}}">product</a></li>
                 <li><a href="{{url_for('main.about')}}">About</a></li>
