--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -10,7 +10,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Responsive Bootstrap4 Shop Template, Created by Imran Hossain from https://imransdesign.com/">
+	<meta name="description" content="">
 	
 	<!-- title -->
 	<title>Fruitkha</title>
@@ -136,7 +136,7 @@
 				<div class="col-lg-8 offset-lg-2 text-center">
 					<div class="section-title">	
 						<h3><span class="orange-text">Our</span> Products</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, fuga quas itaque eveniet beatae optio.</p>
+						<p>When it comes to fresh fruits, we are the preferred choice. At Fruits, we carefully source our wide range of farm-fresh produce from our farms.</p>
 					</div>
 				</div>
 			</div>
@@ -145,7 +145,7 @@
 				<div class="col-lg-4 col-md-6 text-center">
 					<div class="single-product-item">
 						<div class="product-image">
-							<a href="{{url_for('main.single')}}"><img src="static/assets/img/products/product-img-1.jpg" alt=""></a>
+							<a href="{{url_for('main.product')}}"><img src="static/assets/img/products/product-img-1.jpg" alt=""></a>
 						</div>
 						<h3>Strawberry</h3>
 						<p class="product-price"><span>Per Kg</span> 85$ </p>
@@ -155,7 +155,7 @@
 				<div class="col-lg-4 col-md-6 text-center">
 					<div class="single-product-item">
 						<div class="product-image">
-							<a href="{{url_for('main.single')}}"><img src="static/assets/img/products/product-img-2.jpg" alt=""></a>
+							<a href=""><img src="static/assets/img/products/product-img-2.jpg" alt=""></a>
 						</div>
 						<h3>Berry</h3>
 						<p class="product-price"><span>Per Kg</span> 70$ </p>
@@ -165,7 +165,7 @@
 				<div class="col-lg-4 col-md-6 offset-md-3 offset-lg-0 text-center">
 					<div class="single-product-item">
 						<div class="product-image">
-							<a href="{{url_for('main.single')}}"><img src="static/assets/img/products/product-img-3.jpg" alt=""></a>
+							<a href=""><img src="static/assets/img/products/product-img-3.jpg" alt=""></a>
 						</div>
 						<h3>Lemon</h3>
 						<p class="product-price"><span>Per Kg</span> 35$ </p>
@@ -197,8 +197,8 @@
                 <!--Content Column-->
                 <div class="content-column col-lg-6">
 					<h3><span class="orange-text">Deal</span> of the month</h3>
-                    <h4>Hikan Strwaberry</h4>
-                    <div class="text">Quisquam minus maiores repudiandae nobis, minima saepe id, fugit ullam similique! Beatae, minima quisquam molestias facere ea. Perspiciatis unde omnis iste natus error sit voluptatem accusant</div>
+                    <h4>Sweet Strwaberry</h4>
+                    <div class="text">Get 5% discount for every purchase of our sweet berries.</div>
                     <!--Countdown Timer-->
                     <div class="time-counter"><div class="time-countdown clearfix" data-countdown="2020/2/01"><div class="counter-column"><div class="inner"><span class="count">00</span>Days</div></div> <div class="counter-column"><div class="inner"><span class="count">00</span>Hours</div></div>  <div class="counter-column"><div class="inner"><span class="count">00</span>Mins</div></div>  <div class="counter-column"><div class="inner"><span class="count">00</span>Secs</div></div></div></div>
                 	<a href="{{url_for('main.cart')}}" class="cart-btn mt-3"><i class="fas fa-shopping-cart"></i> Add to Cart</a>
@@ -219,9 +219,9 @@
 								<img src="static/assets/img/avaters/avatar1.png" alt="">
 							</div>
 							<div class="client-meta">
-								<h3>Saira Hakim <span>Local shop owner</span></h3>
+								<h3>Abira Watkins <span>Local shop owner</span></h3>
 								<p class="testimonial-body">
-									" Sed ut perspiciatis unde omnis iste natus error veritatis et  quasi architecto beatae vitae dict eaque ipsa quae ab illo inventore Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium "
+									" I am pleased to work with the online fruit vendors site. Their fruits are of high quality "
 								</p>
 								<div class="last-icon">
 									<i class="fas fa-quote-right"></i>
@@ -233,9 +233,9 @@
 								<img src="static/assets/img/avaters/avatar2.png" alt="">
 							</div>
 							<div class="client-meta">
-								<h3>David Niph <span>Local shop owner</span></h3>
+								<h3>Naju Omondi <span>Local shop owner</span></h3>
 								<p class="testimonial-body">
-									" Sed ut perspiciatis unde omnis iste natus error veritatis et  quasi architecto beatae vitae dict eaque ipsa quae ab illo inventore Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium "
+									" Online fruit vendors offer the best fruits and their prices are pocket friendly."
 								</p>
 								<div class="last-icon">
 									<i class="fas fa-quote-right"></i>
@@ -247,9 +247,9 @@
 								<img src="static/assets/img/avaters/avatar3.png" alt="">
 							</div>
 							<div class="client-meta">
-								<h3>Jacob Sikim <span>Local shop owner</span></h3>
+								<h3>James Mugambi <span>Local shop owner</span></h3>
 								<p class="testimonial-body">
-									" Sed ut perspiciatis unde omnis iste natus error veritatis et  quasi architecto beatae vitae dict eaque ipsa quae ab illo inventore Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium "
+									" ONline fruit vendors offer the best fruit prices. Kudos!"
 								</p>
 								<div class="last-icon">
 									<i class="fas fa-quote-right"></i>
@@ -275,9 +275,9 @@
 				<div class="col-lg-6 col-md-12">
 					<div class="abt-text">
 						<p class="top-sub">Since Year 1999</p>
-						<h2>We are <span class="orange-text">Fruitkha</span></h2>
-						<p>Etiam vulputate ut augue vel sodales. In sollicitudin neque et massa porttitor vestibulum ac vel nisi. Vestibulum placerat eget dolor sit amet posuere. In ut dolor aliquet, aliquet sapien sed, interdum velit. Nam eu molestie lorem.</p>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente facilis illo repellat veritatis minus, et labore minima mollitia qui ducimus.</p>
+						<h2>We are <span class="orange-text">Online fruits vendors</span></h2>
+						<p>We offer the best deals both locally and internationally.</p>
+						<p>We really value our customers and customer satisfaction ishighly considered in every deal we make</p>
 						<a href="{{url_for('main.about')}}" class="boxed-btn mt-4">know more</a>
 					</div>
 				</div>
@@ -304,7 +304,7 @@
 				<div class="col-lg-8 offset-lg-2 text-center">
 					<div class="section-title">	
 						<h3><span class="orange-text">Our</span> News</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, fuga quas itaque eveniet beatae optio.</p>
+						<p>Call us and we shall offer the best advice</p>
 					</div>
 				</div>
 			</div>
@@ -312,29 +312,29 @@
 			<div class="row">
 				<div class="col-lg-4 col-md-6">
 					<div class="single-latest-news">
-						<a href="{{url_for('main.single')}}"><div class="latest-news-bg news-bg-1"></div></a>
+						<a href=""><div class="latest-news-bg news-bg-1"></div></a>
 						<div class="news-text-box">
-							<h3><a href="{{url_for('main.single')}}">You will vainly look for fruit on it in autumn.</a></h3>
+							<h3><a href="">You will vainly look for fruit on it in autumn.</a></h3>
 							<p class="blog-meta">
 								<span class="author"><i class="fas fa-user"></i> Admin</span>
 								<span class="date"><i class="fas fa-calendar"></i> 27 December, 2019</span>
 							</p>
-							<p class="excerpt">Vivamus lacus enim, pulvinar vel nulla sed, scelerisque rhoncus nisi. Praesent vitae mattis nunc, egestas viverra eros.</p>
-							<a href="{{url_for('main.single)}}" class="read-more-btn">read more <i class="fas fa-angle-right"></i></a>
+							<p class="excerpt">Contact us for local and international deals.</p>
+							<a href="" class="read-more-btn">read more <i class="fas fa-angle-right"></i></a>
 						</div>
 					</div>
 				</div>
 				<div class="col-lg-4 col-md-6">
 					<div class="single-latest-news">
-						<a href="{{url_for('main.single')}}"><div class="latest-news-bg news-bg-2"></div></a>
+						<a href=""><div class="latest-news-bg news-bg-2"></div></a>
 						<div class="news-text-box">
-							<h3><a href="{{url_for('main.single')}}">A man's worth has its season, like tomato.</a></h3>
+							<h3><a href="">A man's worth has its season, like tomato.</a></h3>
 							<p class="blog-meta">
 								<span class="author"><i class="fas fa-user"></i> Admin</span>
 								<span class="date"><i class="fas fa-calendar"></i> 27 December, 2019</span>
 							</p>
-							<p class="excerpt">Vivamus lacus enim, pulvinar vel nulla sed, scelerisque rhoncus nisi. Praesent vitae mattis nunc, egestas viverra eros.</p>
-							<a href="{{url_for('main.sigle')}}" class="read-more-btn">read more <i class="fas fa-angle-right"></i></a>
+							<p class="excerpt">Visit our premises and get to learn more</p>
+							<a href="" class="read-more-btn">read more <i class="fas fa-angle-right"></i></a>
 						</div>
 					</div>
 				</div>
@@ -347,7 +347,7 @@
 								<span class="author"><i class="fas fa-user"></i> Admin</span>
 								<span class="date"><i class="fas fa-calendar"></i> 27 December, 2019</span>
 							</p>
-							<p class="excerpt">Vivamus lacus enim, pulvinar vel nulla sed, scelerisque rhoncus nisi. Praesent vitae mattis nunc, egestas viverra eros.</p>
+							<p class="excerpt">Complaints or compliments? We would love to hear from you.</p>
 							<a href="{{url_for('main.single')}}" class="read-more-btn">read more <i class="fas fa-angle-right"></i></a>
 						</div>
 					</div>
@@ -369,7 +369,7 @@
 				<div class="col-lg-12">
 					<div class="logo-carousel-inner">
 						<div class="single-logo-item">
-							<img src="static/assets/img/company-logos/1.png" alt="">
+							<img src="static/assets/img/company-logos/11.jpg" width="100px" alt="">
 						</div>
 						<div class="single-logo-item">
 							<img src="static/assets/img/company-logos/2.png" alt="">
@@ -397,16 +397,16 @@
 				<div class="col-lg-3 col-md-6">
 					<div class="footer-box about-widget">
 						<h2 class="widget-title">About us</h2>
-						<p>Ut enim ad minim veniam perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae.</p>
+						<p>We are focused on being the best fruit sellers at both local and international levels.</p>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
 					<div class="footer-box get-in-touch">
 						<h2 class="widget-title">Get in Touch</h2>
 						<ul>
-							<li>34/8, East Hukupara, Gifirtok, Sadan.</li>
-							<li>support@fruitkha.com</li>
-							<li>+00 111 222 3333</li>
+							<li>34/8, Nairobi, Kenya.</li>
+							<li>timohmugendi@gmail.com</li>
+							<li>+254 791 417 147</li>
 						</ul>
 					</div>
 				</div>
