--- a/app/templates/index_2.html
+++ b/app/templates/index_2.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Responsive Bootstrap4 Shop Template, Created by Imran Hossain from https://imransdesign.com/">
+	<meta name="description" content="">
 
 	<!-- title -->
 	<title>Fruitkha - Slider Version</title>
@@ -53,7 +53,7 @@
 						<!-- logo -->
 						<div class="site-logo">
 							<a href="{{url_for('main.index')}}">
-								<img src="static/assets/img/logo.png" alt="">
+								<img src="static/assets/img/11.jpg" width="100px" alt="">
 							</a>
 						</div>
 						<!-- logo -->
