--- a/app/templates/news.html
+++ b/app/templates/news.html
@@ -6,7 +6,7 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<meta name="description" content="Responsive Bootstrap4 Shop Template, Created by Imran Hossain from https://imransdesign.com/">
+	<meta name="description" content="">
 
 	<!-- title -->
 	<title>News</title>
@@ -53,7 +53,7 @@
 						<!-- logo -->
 						<div class="site-logo">
 							<a href="{{url_for('main.index')}}">
-								<img src="static/assets/img/logo.png" alt="">
+								<img src="static/assets/img/11.jpg" width="100px" alt="">
 							</a>
 						</div>
 						<!-- logo -->
@@ -61,14 +61,14 @@
 						<!-- menu start -->
 						<nav class="main-menu">
 							<ul>
-								<li class="current-list-item"><a href="#">Home</a>
+								<li class="current-list-item"><a href="{{url_for('main.index')}}">Home</a>
 									<ul class="sub-menu">
 										<li><a href="{{url_for('main.index')}}">Static Home</a></li>
 										<li><a href="{{url_for('main.indexx')}}">Slider Home</a></li>
 									</ul>
 								</li>
 								<li><a href="{{url_for('main.about')}}">About</a></li>
-								<li><a href="#">Pages</a>
+								<li><a href="{{url_for('main.news')}}">Pages</a>
 									<ul class="sub-menu">
 										
 										<li><a href="{{url_for('main.about')}}">About</a></li>
