--- a/app/templates/single-product.html
+++ b/app/templates/single-product.html
@@ -54,7 +54,7 @@
 						<!-- logo -->
 						<div class="site-logo">
 							<a href="{{url_for('main.index')}}">
-								<img src="static/assets/img/logo.png" alt="">
+								<img src="static/assets/img/11.jpg" width="100px" alt="">
 							</a>
 						</div>
 						<!-- logo -->
