change page styling

--- a/app/templates/contact.html
+++ b/app/templates/contact.html
@@ -160,7 +160,7 @@
 				<div class="col-lg-8 mb-5 mb-lg-0">
 					<div class="form-title">
 						<h2>Have you any question?</h2>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Pariatur, ratione! Laboriosam est, assumenda. Perferendis, quo alias quaerat aliquid. Corporis ipsum minus voluptate? Dolore, esse natus!</p>
+						<p>Contact us by filling the form below! Our support team will get back to you shortly.</p>
 					</div>
 				 	<div id="form_status"></div>
 					<div class="contact-form">
@@ -226,7 +226,7 @@
 				<div class="col-lg-3 col-md-6">
 					<div class="footer-box about-widget">
 						<h2 class="widget-title">About us</h2>
-						<p>Ut enim ad minim veniam perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae.</p>
+						<p>When it comes to fresh fruits, vegetables, spices and herbs, we are the preferred choice. At Fruits Online Vendor, we carefully source our wide range of farm-fresh produce from our farms, from select growers and markets daily.</p>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
