--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -397,7 +397,7 @@
 				<div class="col-lg-3 col-md-6">
 					<div class="footer-box about-widget">
 						<h2 class="widget-title">About us</h2>
-						<p>We are focused on being the best fruit sellers at both local and international levels.</p>
+						<p>When it comes to fresh fruits, vegetables, spices and herbs, we are the preferred choice. At Fruits Online Vendor, we carefully source our wide range of farm-fresh produce from our farms, from select growers and markets daily</p>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
