--- a/app/templates/shop.html
+++ b/app/templates/shop.html
@@ -279,7 +279,7 @@
 				<div class="col-lg-3 col-md-6">
 					<div class="footer-box about-widget">
 						<h2 class="widget-title">About us</h2>
-						<p>Ut enim ad minim veniam perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae.</p>
+						<p>When it comes to fresh fruits, vegetables, spices and herbs, we are the preferred choice. At Fruits Online Vendor, we carefully source our wide range of farm-fresh produce from our farms, from select growers and markets daily</p>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
