--- a/app/templates/single-product.html
+++ b/app/templates/single-product.html
@@ -160,7 +160,7 @@
 					<div class="single-product-content">
 						<h3>Green apples have polyphenols</h3>
 						<p class="single-product-pricing"><span>Per Kg</span> $50</p>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta sint dignissimos, rem commodi cum voluptatem quae reprehenderit repudiandae ea tempora incidunt ipsa, quisquam animi perferendis eos eum modi! Tempora, earum.</p>
+						<p>Green apples have a lot of health and beauty benefits to offer. They are packed with nutrients, fiber, minerals and vitamins that are good for the overall health.</p>
 						<div class="single-product-form">
 							<form action="index.html">
 								<input type="number" placeholder="0">
@@ -189,7 +189,7 @@
 				<div class="col-lg-8 offset-lg-2 text-center">
 					<div class="section-title">	
 						<h3><span class="orange-text">Related</span> Products</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, fuga quas itaque eveniet beatae optio.</p>
+						<p>We sell fresh fruits, vegetables, spices and herbs, we are the preferred choice.</p>
 					</div>
 				</div>
 			</div>
@@ -264,7 +264,7 @@
 				<div class="col-lg-3 col-md-6">
 					<div class="footer-box about-widget">
 						<h2 class="widget-title">About us</h2>
-						<p>Ut enim ad minim veniam perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae.</p>
+						<p>When it comes to fresh fruits, vegetables, spices and herbs, we are the preferred choice. At Fruits Online Vendor, we carefully source our wide range of farm-fresh produce from our farms, from select growers and markets daily.</p>
 					</div>
 				</div>
 				<div class="col-lg-3 col-md-6">
