delete lorem ipsum text

--- a/app/templates/single-news.html
+++ b/app/templates/single-news.html
@@ -160,10 +160,8 @@
 								<span class="date"><i class="fas fa-calendar"></i> 27 December, 2019</span>
 							</p>
 							<h2>Pomegranate can prevent heart disease</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint soluta, similique quidem fuga vel voluptates amet doloremque corrupti. Perferendis totam voluptates eius error fuga cupiditate dolorum? Adipisci mollitia quod labore aut natus nobis. Rerum perferendis, nobis hic adipisci vel inventore facilis rem illo, tenetur ipsa voluptate dolorem, cupiditate temporibus laudantium quidem recusandae expedita dicta cum eum. Quae laborum repellat a ut, voluptatum ipsa eum. Culpa fugiat minus laborum quia nam!</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Et, praesentium, dicta. Dolorum inventore molestias velit possimus, dolore labore aliquam aperiam architecto quo reprehenderit excepturi ipsum ipsam accusantium nobis ducimus laudantium.</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum est aperiam voluptatum id cupiditate quae corporis ex. Molestias modi mollitia neque magni voluptatum, omnis repudiandae aliquam quae veniam error! Eligendi distinctio, ab eius iure atque ducimus id deleniti, vel alias sint similique perspiciatis saepe necessitatibus non eveniet, quo nisi soluta.</p>
-							<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Incidunt beatae nemo quaerat, doloribus obcaecati odio!</p>
+							
+							<p>The homeland of the pomegranate is a region extending from Iran to the Himalayas. Although it has recently become popular as a “super fruit” in the West, its health benefits have been known for thousands of years. Pomegranate was given to kids in the winter to protect them from illnesses and to soldiers for them to stay strong on the road. It is loaded with vitamins A, C and E and is very rich in antioxidants. Pomegranate is good for the heart and protects the immune system as well as helps in the fight against cancer. I don’t know if you need an excuse to eat this delicious fruit but they have played an important role in its recent explosion in popularity!</p>
 						</div>
 
 						<div class="comments-list-wrap">
@@ -174,16 +172,16 @@
 										<img src="static/assets/img/avaters/avatar1.png" alt="">
 									</div>
 									<div class="comment-text-body">
-										<h4>Jenny Joe <span class="comment-date">Aprl 26, 2020</span> <a href="#">reply</a></h4>
-										<p>Nunc risus ex, tempus quis purus ac, tempor consequat ex. Vivamus sem magna, maximus at est id, maximus aliquet nunc. Suspendisse lacinia velit a eros porttitor, in interdum ante faucibus Suspendisse lacinia velit a eros porttitor, in interdum ante faucibus.</p>
+										<h4>Jenny Joe <span class="comment-date">April 26, 2022</span> <a href="#">reply</a></h4>
+										<p>Pomegranate is used as a spice in India, its second-biggest producer..</p>
 									</div>
 									<div class="single-comment-body child">
 										<div class="comment-user-avater">
 											<img src="static/assets/img/avaters/avatar3.png" alt="">
 										</div>
 										<div class="comment-text-body">
-											<h4>Simon Soe <span class="comment-date">Aprl 27, 2020</span> <a href="#">reply</a></h4>
-											<p>Nunc risus ex, tempus quis purus ac, tempor consequat ex. Vivamus sem magna, maximus at est id, maximus aliquet nunc. Suspendisse lacinia velit a eros porttitor, in interdum ante faucibus.</p>
+											<h4>Simon Soe <span class="comment-date">Aprl 27, 2022</span> <a href="#">reply</a></h4>
+											<p>The pomegranate seeds are dried and crushed to create a spice called anardana, which is used to add tartness to various dishes.</p>
 										</div>
 									</div>
 								</div>
@@ -192,8 +190,8 @@
 										<img src="static/assets/img/avaters/avatar2.png" alt="">
 									</div>
 									<div class="comment-text-body">
-										<h4>Addy Aoe <span class="comment-date">May 12, 2020</span> <a href="#">reply</a></h4>
-										<p>Nunc risus ex, tempus quis purus ac, tempor consequat ex. Vivamus sem magna, maximus at est id, maximus aliquet nunc. Suspendisse lacinia velit a eros porttitor, in interdum ante faucibus Suspendisse lacinia velit a eros porttitor, in interdum ante faucibus.</p>
+										<h4>Addy Aoe <span class="comment-date">June 27, 2022</span> <a href="#">reply</a></h4>
+										<p> In the traditional recipe, crushed walnut is mixed with pomegranate juice and cooked with diluted pomegranate molasses.</p>
 									</div>
 								</div>
 							</div>
